--- a/css/styles.css
+++ b/css/styles.css
@@ -10934,7 +10934,7 @@ p.lead {
   margin-right: 0;
 }
 .social-icons .social-icon:hover {
-  background-color: #bd5d38;
+  background-color: #ff6363;
 }
 
 .dev-icons {
